--- a/da/package.json
+++ b/da/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "chart.js": "^4.4.9",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.1.5",
     "vue": "^3.5.13",
